--- a/package.json
+++ b/package.json
@@ -37,25 +37,33 @@
     "@material-tailwind/react": "^2.1.9",
     "@types/conf": "^2.1.0",
     "@types/node-persist": "^3.1.8",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.2.0",
     "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
     "electron-is-dev": "^2.0.0",
     "express": "^5.1.0",
     "firebase": "^11.9.1",
     "google-auth-library": "^10.1.0",
     "i18next": "^23.11.5",
+    "idb": "^8.0.3",
+    "lowdb": "^2.1.0",
     "node-persist": "^4.0.4",
     "open": "^10.1.2",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-router-dom": "^7.6.2",
     "vite": "^2.8.6",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/lowdb": "^1.0.15",
     "@types/node": "^17.0.22",
-    "@types/react": "^17.0.41",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "autoprefixer": "^10.4.4",
@@ -71,7 +79,7 @@
     "postcss": "^8.4.12",
     "prettier": "2.6.0",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^5.8.3"
   },
   "build": {
     "asar": true,
