--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@types/conf": "^2.1.0",
     "@types/node-persist": "^3.1.8",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.2.0",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^16.5.0",
     "electron-is-dev": "^2.0.0",
     "express": "^5.1.0",
@@ -53,7 +56,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "shaka-player": "^4.15.3",
     "vite": "^2.8.6",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5"
