--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "@typescript-eslint/parser": "5.16.0",
     "autoprefixer": "^10.4.4",
+    "dmg-license": "^1.0.11",
     "electron": "^30.0.7",
     "electron-builder": "^24.13.3",
     "eslint": "8.11.0",
